- In advance_control.py minor corrections to get color of status. - In advance_control_status.html display status of on-line valves, with auto-refresh.

--- a/advance_control.html
+++ b/advance_control.html
@@ -112,9 +112,9 @@ $var page: advance_control
                         Shelly Type
                         <select name="shellyModel${sid}" id="shellyModel${sid}">
                             <option value="shelly1">Shelly 1 - Channel 1</option>
-                            <option value="shell2_1">Shelly 2 - Channel 1</option>
-                            <option value="shell2_2">Shelly 2 - Channel 2</option>
-                            <option value="shell1Pro">Shelly 1 Pro - Not supported</option>
+                            <option value="shelly2_1">Shelly 2 - Channel 1</option>
+                            <option value="shelly2_2">Shelly 2 - Channel 2</option>
+                            <option value="shelly1Pro">Shelly 1 Pro - Not supported</option>
                         </select>
 
                         <br />
