--- a/advance_control.html
+++ b/advance_control.html
@@ -6,10 +6,18 @@ $var page: advance_control
 <script>
     // Initialize behaviors
     jQuery(document).ready(function () {
+		jQuery("button#statButton").click(function () {
+			window.location = "/advdisp";
+        });
+
+		jQuery("button#defButton").click(function () {
+			window.location = "/advc";
+		});
 
         jQuery("#cSubmit").click(function () {
             jQuery("#advc").submit();
         });
+
         jQuery("button#cCancel").click(function () {
             window.location = "/";
         });
@@ -51,10 +59,15 @@ $var page: advance_control
     <!--     <button class="execute" id="docButton" type="button" >$_('Help')</button> -->
     <!--     </div> -->
     <div>
+        <button class="execute" id="statButton" type="button">Status</button>
+        <button class="execute" id="defButton" type="button">Definition</button>
+
+        <br /><br />
+
         <p>This plugin can be used to control devices such as raspery pi.</p>
         <p>Activate motors if needed, redirect the wather with valves to the correct place.</p>
 
-        <br /><br />
+        <br />
 
         <form id="advc" name="advc" action="/advu" method="get">
             <br />
@@ -111,10 +124,10 @@ $var page: advance_control
                     <div id="detailsShelly${sid}" name="detailsShelly${sid}" style="display:${"" if commandsAdv[u"typeOutput"][sid] == 'shellyHTTP' else "none" }">
                         Shelly Type
                         <select name="shellyModel${sid}" id="shellyModel${sid}">
-                            <option value="shelly1">Shelly 1 - Channel 1</option>
-                            <option value="shelly2_1">Shelly 2 - Channel 1</option>
-                            <option value="shelly2_2">Shelly 2 - Channel 2</option>
-                            <option value="shelly1Pro">Shelly 1 Pro - Not supported</option>
+                            <option value="shelly1" ${'selected="selected"' if commandsAdv[u"deviceModel"][sid] == 'shelly1' else "" }">Shelly 1 - Channel 1</option>
+                            <option value="shelly2_1" ${'selected="selected"' if commandsAdv[u"deviceModel"][sid] == 'shelly2_1' else "" }">Shelly 2 - Channel 1</option>
+                            <option value="shelly2_2" ${'selected="selected"' if commandsAdv[u"deviceModel"][sid] == 'shelly2_2' else "" }">Shelly 2 - Channel 2</option>
+                            <option value="shelly1Pro" ${'selected="selected"' if commandsAdv[u"deviceModel"][sid] == 'shelly1Pro' else "" }">Shelly 1 Pro - Not supported</option>
                         </select>
 
                         <br />
