--- a/advance_control_status.html
+++ b/advance_control_status.html
@@ -53,7 +53,14 @@ $var page: advance_control_status
 
 	document.addEventListener('DOMContentLoaded', function () {
 		updateValveStatus();
-	}, false);
+    }, false);
+
+    function sendLatchToValve(valNumber) {
+        var xmlhttp = getXHR();
+        xmlhttp.open("GET", "/advls?valveId=" + valNumber, false);
+        xmlhttp.send(null);
+		document.getElementById("lactchStatus" + valNumber).innerHTML = xmlhttp.responseText;
+	}
 </script>
 
 <style>
@@ -88,12 +95,20 @@ $var page: advance_control_status
                 $for s in range(0, 8):
                     $ sid = bid * 8 + s;
                         $if commandsAdv[u"typeOutput"][sid] == 'shellyHTTP' or commandsAdv[u"typeOutput"][sid] == 'sonOff':
-                            <tr>
-                                <td>${gv.snames[sid]}</td>
-                                <td align="center" width="20%"><img src="static/images/${commandsAdv[u"deviceModel"][sid]}.jpg" width="40%"></td>
-                                <td>${commandsAdv[u"deviceIP"][sid]}</td>
-                                <td id="valve${sid}"></td>
-                            </tr>
+                            $if commandsAdv[u"useLatch"][sid] == 1:
+                                <tr>
+                                    <td>${gv.snames[sid]}</td>
+                                    <td align="center" width="20%"><img src="static/images/${commandsAdv[u"deviceModel"][sid]}.jpg" width="40%"></td>
+                                    <td>${commandsAdv[u"deviceIP"][sid]}<br /><button id="latchManualSignal${sid}" class="submit" onclick="sendLatchToValve(${sid})"><b>$_(u'Submit')</b></button><div id="lactchStatus${sid}"></div></td>
+                                    <td id="valve${sid}"></td>
+                                </tr>
+                            $else:
+                                <tr>
+                                    <td>${gv.snames[sid]}</td>
+                                    <td align="center" width="20%"><img src="static/images/${commandsAdv[u"deviceModel"][sid]}.jpg" width="40%"></td>
+                                    <td>${commandsAdv[u"deviceIP"][sid]}</td>
+                                    <td id="valve${sid}"></td>
+                                </tr>
         </table>
 
         <br /><br />
