- In advance_control_status.html change button name to send latch signal. - In advance_control.py simplify code. - In advance_control.py use reboot signal to stop thread. - In advance_control.py in latch send signal, wait same time if turn on.

--- a/advance_control.html
+++ b/advance_control.html
@@ -85,9 +85,9 @@ $var page: advance_control
                         <option value="">None</option>
 
                     $if commandsAdv[u"typeOutput"][sid] == 'comandLine':
-                        <option selected="checked" value="comandLine">Command line</option>
+                        <option selected="checked" value="comandLine">Command Line</option>
                     $else:
-                        <option value="comandLine">Command line</option>
+                        <option value="comandLine">Command Line</option>
 
                     $if commandsAdv[u"typeOutput"][sid] == 'shellyHTTP':
                         <option selected="checked" value="shellyHTTP">Shelly Divices</option>
